// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ref rendering works for branches 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#24292f",
      "fallback": "[github-slack/public-test] Deleted branch <https://github.com/github-slack/public-test/tree/hello|\`hello\`>",
      "footer": "<https://github.com/github-slack/public-test|github-slack/public-test>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Deleted branch <https://github.com/github-slack/public-test/tree/hello|\`hello\`>",
    },
  ],
}
`;

exports[`Ref rendering works for tags 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#24292f",
      "fallback": "[github-slack/public-test] Created tag <https://github.com/github-slack/public-test/tree/hi🤩|\`hi🤩\`>",
      "footer": "<https://github.com/github-slack/public-test|github-slack/public-test>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Created tag <https://github.com/github-slack/public-test/tree/hi🤩|\`hi🤩\`>",
    },
  ],
}
`;
